<resources>
    <string name="app_name">Remote_Control</string>
    <string name="remote_control">远程控制</string>
    <string name="descri">此区块集成了受控端及控制端。</string>
    <string name="warn">仅支持受控端支持超级用户的设备上使用。</string>
    <string name="server">受控端</string>
    <string name="client">控制端</string>
    <string name="server_ip">受控端IP</string>
    <string name="edit_tip1">请输入受控端的IP</string>
    <string name="server_port">受控端端口</string>
    <string name="edit_tip2">请输入受控端的端口</string>
    <string name="remote_ctrl">此区块可控制受控端.</string>
    <string name="warn2">请勿用于非法用途</string>
    <string name="try_connect">尝试连接</string>
    <string name="connect">连接</string>
    <string name="connect_way">连接方式</string>
    <string name="websocket">Websocket</string>
    <string name="adb">ADB</string>
    <string name="power">POWER</string>
    <string name="shutdown">SHUTDOWN</string>
    <string name="reboot">REBOOT</string>
    <string name="home">HOME</string>
    <string name="menu">MENU</string>
    <string name="up">UP</string>
    <string name="enter">ENTER</string>
    <string name="down">DOWN</string>
    <string name="left">LEFT</string>
    <string name="right">RIGHT</string>
    <string name="back">BACK</string>
    <string name="vol">VOL+</string>
    <string name="mute">MUTE</string>
    <string name="volm">VOL-</string>
    <string name="Logs">日志</string>
    <string name="Logs_tip">Logs will appears here..\n</string>
    <string name="check_auto_tip">受控端开机自启</string>
    <string name="check_quit_all">退出结束所有进程</string>
    <string name="run_mode">运行模式</string>
    <string name="choose_mode">选择模式</string>
</resources>
