<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@android:style/Widget.Material.Light.ScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fadingEdge="vertical"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/client"
                    android:textAppearance="@android:style/TextAppearance.Material.Title"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/remote_ctrl" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/warn2"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/red" />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_ip"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/server_ip"
                    style="@android:style/Widget.Material.Light.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/edit_tip1"
                    android:importantForAutofill="no"
                    android:inputType="textUri"
                    tools:targetApi="o" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/server_port"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/server_port"
                    style="@android:style/Widget.Material.Light.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:hint="@string/edit_tip2"
                    android:importantForAutofill="no"
                    android:inputType="number"
                    tools:targetApi="o" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/try_connect"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <Button
                    android:onClick="onClick"
                    android:id="@+id/client_connect"
                    style="@android:style/Widget.Material.Light.Button.Borderless"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/connect"
                    android:textColor="@color/shojo" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="远程控制"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/power"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="POWER"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/poweroff"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="SHUTDOWN"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/reboot"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="REBOOT"
                        android:textColor="@color/shojo" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/up"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:text="UP"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/enter"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/up"
                        android:layout_centerHorizontal="true"
                        android:text="ENTER"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/down"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/enter"
                        android:layout_centerHorizontal="true"
                        android:text="DOWN"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/left"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/up"
                        android:layout_toStartOf="@id/enter"
                        android:text="LEFT"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/right"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/up"
                        android:layout_toEndOf="@id/enter"
                        android:text="RIGHT"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:layout_toStartOf="@id/up"
                        android:id="@+id/home"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="HOME"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:layout_toEndOf="@id/up"
                        android:id="@+id/menu"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MENU"
                        android:textColor="@color/shojo" />

                    <Button
                        android:onClick="onClick"
                        android:id="@+id/volup"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VOL+"
                        android:textColor="@color/shojo" />
                    <Button
                        android:layout_below="@id/volup"
                        android:onClick="onClick"
                        android:id="@+id/mute"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="MUTE"
                        android:textColor="@color/shojo" />
                    <Button
                        android:onClick="onClick"
                        android:layout_alignParentStart="true"
                        android:layout_below="@id/left"
                        android:id="@+id/volmi"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="VOL-"
                        android:textColor="@color/shojo" />
                    <Button
                        android:layout_alignParentRight="true"
                        android:layout_below="@id/right"
                        android:onClick="onClick"
                        android:id="@+id/back"
                        style="@android:style/Widget.Material.Light.Button.Borderless"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="BACK"
                        android:textColor="@color/shojo" />
                </RelativeLayout>


            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_weight="0"
            app:cardElevation="5dp"
            app:contentPadding="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="日志"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <ScrollView
                    android:layout_marginTop="5dp"
                    style="@android:style/Widget.Material.ScrollView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fadingEdge="vertical"
                    android:scrollbars="vertical">

                    <TextView
                        android:id="@+id/logs"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small"
                        android:textColor="#2196F3" />
                </ScrollView>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </LinearLayout>
</ScrollView>

